--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1004,7 +1004,7 @@
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">專案介紹</div>
                         <div class="work_info_text">
-                            永豐銀行代理保險商品，會員可直接線上投保，為此需要開發網站提供保險資訊、保費試算、線上繳費...等投保服務。
+                            永豐銀行希望製作網站平台提供會員保險代理的服務，內容有保險方案、保費試算、線上繳費、投保紀錄...等，會員能以網路銀行的註冊資料，完成線上投保並獲得保險公司相關後續服務。
                         </div>
                         <div class="project_img_container">
                             <picture>
@@ -1020,7 +1020,8 @@
                         <div class="work_info_text">
                             <span class="work_info_text_p font_bold">永豐銀行專案執行目的</span>
                             <ul>
-                                <li>多元的金融服務，促進會員品牌忠誠度。</li>
+                                <li>會員無須額外註冊，享有多元的保險服務，提升品牌忠誠度。</li>
+                                <li>減輕銀行人員處理實體業務的負擔。</li>
                                 <li>以會員數作為保險公司的合作誘因，獲取仲介營收。</li>
                                 <li>獲取保險產業動向與策略，藉此規劃利基點擴大營利。</li>
                             </ul>
@@ -1029,7 +1030,7 @@
                                 <li>提高品牌和商品曝光率。</li>
                                 <li>增加商品銷售管道。</li>
                                 <li>增加民眾成為自家保戶的轉換率。</li>
-                                <li>無須額外開發、維運的人力成本。</li>
+                                <li>無須額外開發、維運網站的人力成本。</li>
                             </ul>
                         </div>
                     </div>
