--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1018,14 +1018,14 @@
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">商業價值<span>個人觀察解讀，非永豐銀行實際策略</span></div>
                         <div class="work_info_text">
-                            <span class="work_info_text_p font_bold">永豐銀行專案執行目的</span>
+                            <span class="work_info_text_p font_bold">永豐銀行角度</span>
                             <ul>
                                 <li>會員無須額外註冊，享有多元的保險服務，提升品牌忠誠度。</li>
                                 <li>減輕銀行人員處理實體業務的負擔。</li>
                                 <li>以會員數作為保險公司的合作誘因，獲取仲介營收。</li>
                                 <li>獲取保險產業動向與策略，藉此規劃利基點擴大營利。</li>
                             </ul>
-                            <span class="work_info_text_p font_bold" style="margin-top:10px;">保險公司合作目的</span>
+                            <span class="work_info_text_p font_bold" style="margin-top:10px;">保險公司角度</span>
                             <ul>
                                 <li>提高品牌和商品曝光率。</li>
                                 <li>增加商品銷售管道。</li>
