--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1022,8 +1022,8 @@
                             <ul>
                                 <li>會員無須額外註冊，享有多元的保險服務，提升品牌忠誠度。</li>
                                 <li>減輕銀行人員處理實體業務的負擔。</li>
-                                <li>以會員數作為保險公司的合作誘因，獲取仲介營收。</li>
-                                <li>獲取保險產業動向與策略，藉此規劃利基點擴大營利。</li>
+                                <li>以會員數向保險公司獲取仲介營收。</li>
+                                <li>了解保險產業與策略動向，從中規劃機會點擴大收益。</li>
                             </ul>
                             <span class="work_info_text_p font_bold" style="margin-top:10px;">保險公司角度</span>
                             <ul>
@@ -1036,7 +1036,7 @@
                     </div>
 
                     <div id="p7_title" class="work_info_part" style="margin-bottom:0px;">
-                        <div class="work_info_title h3 font_bold">專案負責範圍</div>
+                        <div class="work_info_title h3 font_bold">工作涵蓋範圍</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
                                 <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>產品規劃
@@ -1196,7 +1196,7 @@
                     </div>
 
                     <div class="work_info_part" style="margin-bottom:0px;">
-                        <div id="p8-2_title" class="work_info_title h3 font_bold">專案負責範圍</div>
+                        <div id="p8-2_title" class="work_info_title h3 font_bold">工作涵蓋範圍</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
                                 <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>介面視覺提案
@@ -1298,7 +1298,7 @@
                                     </div>
                                 </div>
                                 <div class="work_info_part" style="margin-bottom:0px;">
-                                    <div class="work_info_title h3 font_bold">專案負責範圍</div>
+                                    <div class="work_info_title h3 font_bold">工作涵蓋範圍</div>
                                     <div class="work_info_subpart">
                                         <div class="work_info_subtitle h4 font_bold">
                                             <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>規劃APP&amp;管理後台
@@ -1343,7 +1343,7 @@
                             </div>
                         </div>
                         <div class="work_info_part display_none_1200_2 display_block_960_2" style="margin-bottom:0px;">
-                            <div class="work_info_title h3 font_bold">專案負責範圍</div>
+                            <div class="work_info_title h3 font_bold">工作涵蓋範圍</div>
                             <div class="work_info_subpart">
                                 <div class="work_info_subtitle h4 font_bold">
                                     <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>規劃APP&amp;管理後台
@@ -1453,7 +1453,7 @@
                                     </div>
                                 </div>
                                 <div class="work_info_part" style="margin-bottom:0px;">
-                                    <div class="work_info_title h3 font_bold">專案負責範圍</div>
+                                    <div class="work_info_title h3 font_bold">工作涵蓋範圍</div>
                                     <div class="work_info_subpart">
                                         <div class="work_info_subtitle h4 font_bold">
                                             <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>規劃內容架構
@@ -1490,7 +1490,7 @@
                         </div>
 
                         <div class="work_info_part display_none_1200_2 display_block_960_2" style="margin-bottom:0px;">
-                            <div class="work_info_title h3 font_bold">專案負責範圍</div>
+                            <div class="work_info_title h3 font_bold">工作涵蓋範圍</div>
                             <div class="work_info_subpart">
                                 <div class="work_info_subtitle h4 font_bold">
                                     <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>規劃內容架構
@@ -1577,7 +1577,7 @@
                     </div>
 
                     <div id="p11_title" class="work_info_part" style="margin-bottom:0px;">
-                        <div class="work_info_title h3 font_bold">專案負責範圍</div>
+                        <div class="work_info_title h3 font_bold">工作涵蓋範圍</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
                                 <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>介面設計稿<span>Mockups</span>
