--- a/sino_works_3.html
+++ b/sino_works_3.html
@@ -104,7 +104,7 @@
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">文字規範(標題為例)</div>
-                        <div class="pup_normal_text">根據網站內容層級和重要性，訂定各項文字樣式，並設置RWD樣式斷點。</div>
+                        <div class="pup_normal_text">根據<span class="emphasize_text">網站內容層級和重要性</span>，訂定各項文字樣式，並設置RWD樣式斷點。</div>
                         <div class="pup_normal_text">文字給予樣式名稱和數值，提供前端切版建立樣式庫。</div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
@@ -142,7 +142,7 @@
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">顏色規範(通用色、文本色為例)</div>
-                        <div class="pup_normal_text">以永豐銀行商標配色，考量產業類型、服務訴求選擇用色，並定義使用邏輯和規則。</div>
+                        <div class="pup_normal_text"><span class="emphasize_text">分析永豐商標配色</span>，考量產業類型、服務訴求選擇用色，並定義使用邏輯和規則。</div>
                         <div class="pup_normal_text">給予色碼、樣式名稱，提供前端切版建立樣式庫。</div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
