--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1039,17 +1039,17 @@
                         <div class="work_info_title h3 font_bold">工作涵蓋範圍</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
-                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>產品規劃
+                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>網站規劃
                             </div>
                             <div class="work_info_subtext">
                                 進行需求訪談並定義產品面向，規劃資訊架構、頁面布局、功能機制並繪製線框稿Wireframe，協助完成PRD文件使網站開發有所依據。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_0.html">UX分析-制定產品輪廓</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_0.html">制定網站面向-UX分析</a></span>
                             </div>
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_1.html">製作產品框架</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_1.html">製作網站框架-Wireframe產出</a></span>
                                 </div>
                             </div>
                             <div class="work_info_note">
@@ -1068,16 +1068,16 @@
                                 <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_2.html">設計稿</a></span>
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_3.html">產品開發文件、設計系統介紹</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_3.html">網站開發文件、設計系統介紹</a></span>
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_mockup?node-id=0-1&p=f&t=QwG6qnLmWYiPU3aM-0" target="_blank" id="sino_mockups_figma">產品開發文件、設計系統(figma)</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_mockup?node-id=0-1&p=f&t=QwG6qnLmWYiPU3aM-0" target="_blank" id="sino_mockups_figma">網站開發文件、設計系統(figma)</a></span>
                             </div>
 
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_4.html">產品設計-易用性思維</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_4.html">網站易用性-設計執行</a></span>
                                 </div>
                             </div>
                         </div>
