--- a/sino_works_6.html
+++ b/sino_works_6.html
@@ -74,7 +74,7 @@
 <body class="body_page sino_works_6_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">網路投保網站&nbsp;測試報告</div>
+            <div class="h4 font_bold">投保網站&nbsp;易用性測試</div>
             <a href="uiux_index.html#p7_title" id="sino_w6_back">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
