--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1199,7 +1199,7 @@
                         <div id="p8-2_title" class="work_info_title h3 font_bold">工作涵蓋範圍</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
-                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>介面視覺提案
+                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>網站視覺提案
                             </div>
                             <div class="work_info_subtext">
                                 我方公司與<span class="font_bold">兩家上市企業的設計部門競爭提案</span>，個人分析客戶營業屬性，發想製作兩款介面風格，設計符合客戶的期待並<span class="font_bold">取得標案</span>。
@@ -1580,19 +1580,19 @@
                         <div class="work_info_title h3 font_bold">工作涵蓋範圍</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
-                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>介面設計稿<span>Mockups</span>
+                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>視覺設計稿<span>Mockups</span>
                             </div>
                             <div class="work_info_subtext">
                                 依行銷人員提供的<a href="taian_info.html" class="pup_info_link">示意資料</a>，討論確認後，產出介面設計稿。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span><a href="taian_works.html">介面設計稿</a></span>
+                                <span><a href="taian_works.html">視覺設計稿</a></span>
                             </div>
                         </div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
-                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>初步原型<span>Prototype</span>
+                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>原型<span>Prototype</span>
                             </div>
                             <div class="work_info_subtext">
                                 確認介面設計稿後，進行前端切版製作初步原型。
