--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -89,7 +89,7 @@
                     <div class="pup_content_text" style="margin-top:10px;">
                         <div class="text_row">
                             <div class="text_item">
-                                <div class="text_item_title h6">以「5W1H」的形式和客戶<span class="emphasize_text">了解網站製作緣由和預期的使用者</span>，從中挖掘統整使用者輪廓。</div>
+                                <div class="text_item_title h6">以「5W1H」的形式向客戶詢問，<span class="emphasize_text">了解網站製作緣由和預期的使用者</span>，從中挖掘統整使用者輪廓。</div>
                             </div>
                         </div>
                     </div>
@@ -98,8 +98,8 @@
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">一、網站目標使用者輪廓</div>
-                    <div class="pup_normal_text">由廣至深的逐步收斂出所謂「82法則」中<span class="emphasize_text">佔據8成產品收益來源的主力使用者</span>，<br />根據使用者輪廓作為產品開發<span class="emphasize_text">「如：行銷推廣、招募受訪者、網站內容制定...等」</span>之依據。</div>
-                    <div class="pup_normal_text_small" style="margin-top:10px;">展示部分條件為例(非實際詳細資訊)。</div>
+                    <div class="pup_normal_text">由廣至深收斂「82法則」中，<span class="emphasize_text">貢獻8成收益的主力使用者，<br />根據該輪廓作為產品開發依據</span>「如：行銷推廣、招募受訪者、網站內容制定...等」。</div>
+                    <div class="pup_normal_text_small" style="margin-top:10px;">展示部分條件為例</div>
                     <div class="pup_normal_text"></div>
                     <div class="pup_content_text">
                         <div class="text_row">
@@ -113,16 +113,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pup_normal_text_small" style="margin-top:5px;">可以從業務單位藉由他們經驗，了解主力消費者大概會有哪些特性和條件，<br />以<span class="emphasize_text">「產品適配性高低」、「獲利影響大小」</span>以十字量表作為條件篩選和排序，由廣入深以漏斗的方式篩選出主力客群，並從中分析使用者屬性。</div>
-                    <div class="pup_normal_text_small" style="margin-top:10px;">如果沒有業務單位可以詢問，可以「田野調查網路社群，如：FB相關主題社團觀察他們的大頭像或熱門討論的內容(語氣個性、情緒)」，<br />對於客群能有初步的輪廓，藉此再尋求相關領域的專家進行深度的訪談，初步推估主力客群條件。</div>
+                    <div class="pup_normal_text_small" style="margin-top:5px;display:none;">可以從業務單位藉由他們經驗，了解主力消費者大概會有哪些特性和條件，<br />以<span class="emphasize_text">「產品適配性高低」、「獲利影響大小」</span>以十字量表作為條件篩選和排序，由廣入深以漏斗的方式篩選出主力客群，並從中分析使用者屬性。</div>
+                    <div class="pup_normal_text_small" style="margin-top:10px;display:none;">如果沒有業務單位可以詢問，可以「田野調查網路社群，如：FB相關主題社團觀察他們的大頭像或熱門討論的內容(語氣個性、情緒)」，<br />對於客群能有初步的輪廓，藉此再尋求相關領域的專家進行深度的訪談，初步推估主力客群條件。</div>
 
                 </div>
             </div>
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">二、產品服務取向和使用者屬性</div>
-                    <div class="pup_normal_text">分析產品概念或競品網站(文案用詞、視覺元素)來推測，<span class="emphasize_text">前來投保網站的使用者會有「個性、偏好」</span>。</div>
-                    <div class="pup_normal_text_small" style="margin-top:10px;">投保網站以「保險」為主題進行分析。</div>
+                    <div class="pup_normal_text">分析產品概念或競品網站(主題內容、視覺氛圍)來推測，<span class="emphasize_text">投保網站的使用者會有「個性、偏好」</span>。</div>
+                    <div class="pup_normal_text_small" style="margin-top:10px;">以「保險」為主題進行分析。</div>
                     <div class="pup_content_pic_container" style="margin-top:20px;">
                         <div class="pup_content_pic_item">
                             <div class="pup_content_pic_item" style="text-align:left;">
@@ -139,8 +139,8 @@
             </div>
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
-                    <div class="part_title h5 font_bold emphasize_text">三、統整精煉產品面向</div>
-                    <div class="pup_normal_text">統整服務取向、使用者屬性，<span class="emphasize_text">以網站能對使用者產生共情效應為目的，<br /></span>作為產品設計方向，如：網站視覺風格、文案用詞語氣、頁面主題制定...等。</div>
+                    <div class="part_title h5 font_bold emphasize_text">三、精煉產品面向</div>
+                    <div class="pup_normal_text">統整服務取向、使用者屬性，<span class="emphasize_text">對使用者產生共情為目的，<br /></span>作為設計方向，如：視覺風格、文案用詞語氣、頁面主題制定...等。</div>
                     <div class="pup_content_pic_container">
                         <div class="pup_content_pic_item">
                             <div class="pup_content_pic_item" style="text-align:left;">
@@ -153,7 +153,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pup_normal_text_small" style="margin-top:50px;">※後續仍能以「質化研究，如：使用者訪談的人物誌光譜」「客服部門的CRM資料」「營運目標」來修正調整產品面向。</div>
+                    <div class="pup_normal_text_small" style="margin-top:50px;display:none;">※後續仍能以「質化研究，如：使用者訪談的人物誌光譜」「客服部門的CRM資料」「營運目標」來修正調整產品面向。</div>
                 </div>
             </div>
 
