--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -120,7 +120,7 @@
             </div>
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
-                    <div class="part_title h5 font_bold emphasize_text">二、產品服務取向和使用者屬性</div>
+                    <div class="part_title h5 font_bold emphasize_text">二、產業服務取向和使用者屬性</div>
                     <div class="pup_normal_text">分析產品概念或競品網站(主題內容、視覺氛圍)來推測，<span class="emphasize_text">投保網站的使用者會有「個性、偏好」</span>。</div>
                     <div class="pup_normal_text_small" style="margin-top:10px;">以「保險」為主題進行分析。</div>
                     <div class="pup_content_pic_container" style="margin-top:20px;">
@@ -140,7 +140,7 @@
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">三、精煉產品面向</div>
-                    <div class="pup_normal_text">統整服務取向、使用者屬性，<span class="emphasize_text">對使用者產生共情為目的，<br /></span>作為設計方向，如：視覺風格、文案用詞語氣、頁面主題制定...等。</div>
+                    <div class="pup_normal_text"><span class="emphasize_text">讓使用者產生共情為設計方向，</span><br />如：視覺風格、文案用詞語氣、頁面主題制定...等。</div>
                     <div class="pup_content_pic_container">
                         <div class="pup_content_pic_item">
                             <div class="pup_content_pic_item" style="text-align:left;">
