--- a/uiux_index.html
+++ b/uiux_index.html
@@ -515,6 +515,7 @@
                                 <li>近三年專案，客戶皆集團級企業。</li>
                                 <li>觀察資料脈絡，靈活提出產品策略。</li>
                                 <li>熟悉易用、易讀原則，實踐產品介面。</li>
+                                <li>懂前後端運作概念，與工程師溝通順暢。</li>
                             </ul>
                         </div>
                     </div>
@@ -525,6 +526,7 @@
                         <li>近三年專案，客戶皆集團級企業。</li>
                         <li>觀察資料脈絡，靈活提出產品策略。</li>
                         <li>熟悉易用、易讀原則，實踐產品介面。</li>
+                        <li>懂前後端運作概念，與工程師溝通順暢。</li>
                     </ul>
                 </div>
                 <a href="info_attribute_tell.html">
