--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -98,7 +98,7 @@
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">一、網站目標使用者輪廓</div>
-                    <div class="pup_normal_text">由廣至深收斂「82法則」中，<span class="emphasize_text">貢獻8成收益的主力使用者，<br />根據該輪廓作為產品開發依據</span>「如：行銷推廣、招募受訪者、網站內容制定...等」。</div>
+                    <div class="pup_normal_text">由廣至深收斂「82法則」中，<span class="emphasize_text">貢獻8成收益的主力使用者條件，<br />根據該輪廓作為產品開發依據</span>「如：行銷推廣、招募受訪者、網站內容制定...等」。</div>
                     <div class="pup_normal_text_small" style="margin-top:10px;">展示部分條件為例</div>
                     <div class="pup_normal_text"></div>
                     <div class="pup_content_text">
@@ -108,7 +108,7 @@
                                     <li>年齡25至40歲。</li>
                                     <li>有網站消費的經驗。</li>
                                     <li>具保險認知與觀念。</li>
-                                    <li>具有家庭觀念。</li>
+                                    <li>為保障家人購買保險。</li>
                                 </ul>
                             </div>
                         </div>
