--- a/sino_works_1.html
+++ b/sino_works_1.html
@@ -114,7 +114,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">一、釐清業務流程與需求情境</div>
                         <div class="pup_normal_text">從直面市場的業務單位，獲取資訊衍生網站內容。</div>
-                        <div class="pup_normal_text"><span class=" emphasize_text">以「專家訪談」方式，訪談資深保險業務</span>，認識簽訂保單過程。</div>
+                        <div class="pup_normal_text"><span class=" emphasize_text">以「專家訪談」方式，訪談保險業務</span>，認識簽訂保單過程。</div>
                         <div class="pup_content_text">
                             <div class="text_row">
                                 <div class="text_item">
