--- a/uiux_index.html
+++ b/uiux_index.html
@@ -818,7 +818,7 @@
                             <div class="left_line_large"></div>
                         </div>
                         <div class="progress_item progress_medium_item progress_medium_item_right_padding">
-                            <div class="progress_item_time font_bold"><span>2014.05&nbsp;-&nbsp;2016.04</span><br />網站設計師</div>
+                            <div class="progress_item_time font_bold"><span>2014.05&nbsp;-&nbsp;2016.04</span><br />網頁設計師</div>
                             <div class="progress_item_content">
                                 <span class="font_bold">政府網站接案公司</span>，負責響應式網站設計和Html.Css無障礙前端切版。
                             </div>
@@ -840,7 +840,7 @@
 
                     <div class="info_work_progress_item">
                         <div class="progress_item progress_medium_item progress_medium_item_left_padding">
-                            <div class="progress_item_time font_bold"><span>2016.04&nbsp;-&nbsp;2021.03</span><br />產品設計師</div>
+                            <div class="progress_item_time font_bold"><span>2016.04&nbsp;-&nbsp;2021.03</span><br />網站設計師</div>
                             <div class="progress_item_content">
                                 <span class="font_bold">教育類科技公司</span>，網站產品和管理後台規劃、介面設計製作、RWD網站版面建置、介面互動效果、APP產品維運更迭。
                             </div>
@@ -1047,11 +1047,11 @@
                                 進行需求訪談並定義產品面向，規劃資訊架構、頁面布局、功能機制並繪製線框稿Wireframe，協助完成PRD文件使網站開發有所依據。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_0.html">制定網站面向-UX分析</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_0.html">內容面向-UX分析</a></span>
                             </div>
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_1.html">製作網站框架-Wireframe產出</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_1.html">內容框架-Wireframe產出</a></span>
                                 </div>
                             </div>
                             <div class="work_info_note">
@@ -1070,16 +1070,16 @@
                                 <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_2.html">設計稿</a></span>
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_3.html">網站開發文件、設計系統介紹</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_3.html">開發文件、設計系統介紹</a></span>
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_mockup?node-id=0-1&p=f&t=QwG6qnLmWYiPU3aM-0" target="_blank" id="sino_mockups_figma">網站開發文件、設計系統(figma)</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_mockup?node-id=0-1&p=f&t=QwG6qnLmWYiPU3aM-0" target="_blank" id="sino_mockups_figma">開發文件、設計系統(figma)</a></span>
                             </div>
 
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_4.html">網站易用性-設計執行</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_4.html">易用性設計執行</a></span>
                                 </div>
                             </div>
                         </div>
