--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1041,17 +1041,17 @@
                         <div class="work_info_title h3 font_bold">工作涵蓋範圍</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
-                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>網站規劃
+                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>內容規劃
                             </div>
                             <div class="work_info_subtext">
                                 進行需求訪談並定義產品面向，規劃資訊架構、頁面布局、功能機制並繪製線框稿Wireframe，協助完成PRD文件使網站開發有所依據。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_0.html">內容面向-UX分析</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_0.html">網站面向-UX分析</a></span>
                             </div>
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_1.html">內容框架-Wireframe產出</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_1.html">網站框架-Wireframe產出</a></span>
                                 </div>
                             </div>
                             <div class="work_info_note">
