--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -152,7 +152,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pup_normal_text_small" style="margin-top:50px;display:none;">※後續仍能以「質化研究，如：使用者訪談的人物誌光譜」「客服部門的CRM資料」「營運目標」來修正調整產品面向。</div>
+                    <div class="pup_normal_text_small" style="margin-top:50px;">※後續能以「使用者訪談彙整人物誌光譜」「市場和商業策略變化」調整產品面向。</div>
                 </div>
             </div>
 
