--- a/sino_works_1.html
+++ b/sino_works_1.html
@@ -74,7 +74,7 @@
 <body class="body_page sino_works_1_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">投保網站&nbsp;內容框架</div>
+            <div class="h4 font_bold">投保網站框架&nbsp;內容規劃</div>
             <a href="uiux_index.html#p7_title" id="sino_w1_back">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
@@ -85,7 +85,7 @@
         <div class="pup_window_content_tab_container">
             <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_1 h5 font_bold"><a href="#sino_tab_1" class="set_middle" id="sino_w1_tab1"><span>資訊架構</span></a></div>
             <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_2 h5 font_bold"><a href="#sino_tab_2" class="set_middle" id="sino_w1_tab2"><span>頁面布局</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_3 h5 font_bold"><a href="#sino_tab_3" class="set_middle" id="sino_w1_tab3"><span>功能機制</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_3 h5 font_bold"><a href="#sino_tab_3" class="set_middle" id="sino_w1_tab3"><span>線框稿</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
 
@@ -93,13 +93,13 @@
 
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:30px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">前言</div>
+                        <div class="part_title h5 font_bold emphasize_text">一、桌面研究</div>
                         <div class="pup_content_text" style="margin-top:10px;">
                             <div class="text_row">
                                 <div class="text_item">
-                                    <div class="text_item_title h6">從3個方向進行資料收集</div>
+                                    <div class="text_item_title h6">由3個方向進行資料收集、彙整</div>
                                     <ul class="text_item_list" style="list-style:disc;padding-left:25px;margin:10px 0px;">
-                                        <li>從保險業務<span class="emphasize_text">了解客戶投保的業務情境</span>。</li>
+                                        <li>從保險業務<span class="emphasize_text">了解客戶簽訂保單流程</span>。</li>
                                         <li><span class="emphasize_text">探訪相關類型網站</span>，分析架構、內容、流程。</li>
                                         <li><span class="emphasize_text">從網路社群了解大眾</span>，對於網路投保的使用經驗。</li>
                                     </ul>
@@ -112,7 +112,7 @@
 
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">一、釐清業務流程與需求情境</div>
+                        <div class="part_title h5 font_bold emphasize_text">二、釐清業務流程與需求情境</div>
                         <div class="pup_normal_text">從直面市場的業務單位，獲取資訊衍生網站內容。</div>
                         <div class="pup_normal_text"><span class=" emphasize_text">以「專家訪談」方式，訪談保險業務</span>，認識簽訂保單過程。</div>
                         <div class="pup_content_text">
@@ -156,11 +156,11 @@
 
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">二、規劃網站操作流程與功能內容</div>
+                        <div class="part_title h5 font_bold emphasize_text">三、操作流程與功能內容</div>
                         <div class="pup_content_text">
                             <div class="text_row">
                                 <div class="text_item">
-                                    <div class="text_item_title h6">確認網站使用目標</div>
+                                    <div class="text_item_title h6">確認使用目標</div>
                                     <div>
                                         <img src="images/sino_pic_1.png" class="sino_pic_1">
                                     </div>
@@ -170,7 +170,7 @@
                                     <i class="fa fa-long-arrow-down display_block_1440"></i>
                                 </div>
                                 <div class="text_item">
-                                    <div class="text_item_title h6 emphasize_text">以投保業務流程、同類型網站，規劃網站操作流程</div>
+                                    <div class="text_item_title h6 emphasize_text">以實體業務流程、同類型網站&nbsp;→&nbsp;規劃網站操作流程</div>
                                     <div>
                                         <picture>
                                             <source media="(max-width:430px)" srcset="images/sino_pic_2_540.png" />
@@ -218,7 +218,7 @@
 
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">三、以操作流程和功能內容，歸納資料項目</div>
+                        <div class="part_title h5 font_bold emphasize_text">四、以操作流程和功能內容，歸納資料項目</div>
                         <div class="pup_content_text">
 
                             <div class="text_row">
@@ -239,7 +239,7 @@
 
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">四、以資料項目規劃網站互動機制</div>
+                        <div class="part_title h5 font_bold emphasize_text">五、以資料項目規劃網站互動機制</div>
                         <div class="pup_content_text">
 
                             <div class="text_row">
@@ -259,7 +259,7 @@
 
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">五、釐清資料來源、內容項目和互動機制</div>
+                        <div class="part_title h5 font_bold emphasize_text">六、釐清資料來源、內容項目和互動機制</div>
                         <div class="pup_content_text">
 
                             <div class="system_data_info_container">
